--- a/Lommeregner/index.html
+++ b/Lommeregner/index.html
@@ -16,7 +16,7 @@
 		<center>
 			<div class="main" style="">
 				<form name="form">
-					<input class="textview" name="textview" id="text">
+					<input class="textview" name="textview" id="text" readonly>
 					<br>
 					<input class="viewtext" name="viewtext" id="text" readonly>
 					</form>
