--- a/Lommeregner/index.html
+++ b/Lommeregner/index.html
@@ -74,7 +74,7 @@
 																								<input class="button" type="button" value="3" onclick="insert(3)">
 																								</td>
 																								<td rowspan=5>
-																									<input class="button" style="height: 105px;" type="button" value="=" onclick="equal()"">
+																									<input class="button" style="height: 105px;" type="button" value="=" onclick="equal()">
 																									</td>
 																								</tr>
 																								<tr>
