--- a/Lommeregner/index.html
+++ b/Lommeregner/index.html
@@ -18,7 +18,7 @@
 				<form name="form">
 					<input class="textview" name="textview" id="text1" value="0" autocomplete="off" readonly>
 					<br>
-					<input class="viewtext" name="viewtext" id="text2" readonly>
+					<input class="viewtext" name="viewtext" id="text2" autocomplete="off" readonly>
 					</form>
 					<table>
 						<tr>
