--- a/Lommeregner/index.html
+++ b/Lommeregner/index.html
@@ -14,7 +14,8 @@
 		<div class="bg">
 		</div>
 		<center>
-			<div class="main" style="">
+			<div class="main" id="mydiv">
+				<div id="mydivheader"></div>
 				<form name="form">
 					<input class="textview" name="textview" id="text1" value="0" autocomplete="off" readonly>
 					<br>
@@ -87,6 +88,7 @@
 																										</tr>
 																									</table>
 																									<p style="font-size: 23px; font-family:Script; opacity: 0.7; margin: 2px;">Benjamin's Lommeregner</p>
+																								
 																								</div>
 																							</center>
 																						</body>
