--- a/Hjemmeside/Index.html
+++ b/Hjemmeside/Index.html
@@ -24,15 +24,15 @@
 												<a>
 													<strong>Email:</strong>
 													<br>
-														<br>Benjaminbadstue20011@gmail.com</a>
+														<br>Benjamin**********@gmail.com</a>
 														<a>
 															<strong>Nummer:</strong>
 															<br>
-																<br> +45 20948376</a>
+																<br> +45 ********</a>
 																<a>
 																	<strong>Adresse:</strong>
 																	<br>
-																		<br>Løvenholmvej 78<br>Randers<br>8930</a>
+																		<br>*********<br>Randers<br>****</a>
 																			</div>
 																		</div>
 																		<a href="docs/CV.pdf" target="_blank" style="position: absolute">CV</a>
